--- a/public/css/sass/style.scss
+++ b/public/css/sass/style.scss
@@ -25,29 +25,26 @@ body {
   min-height: 1300px;
 }
 .ParallaxVideo {
-  height: 800px;
-  padding-bottom: 50px;
-  padding-top: 50px;
+  height: 900px;
   video {
     min-width: 100%;
-    position: fixed;
     top: 0;
     z-index: -999;
     background: transparent url('http://eagleads.phpsitescripts.com/images/wheat.jpg') no-repeat 0 0;
   }
   h1 {
     color: #fff;
-    font-size: 8em;
+    font-size: 9em;
     line-height: 1.1;
     text-align: center;
-    opacity: 0.8;
+    opacity: 0.9;
     font-family: $headingfont;
     font-weight: 400;
     text-shadow: $textshadow;
     margin: 0;
   }
   h2 {
-    font-size: 1.5em;
+    font-size: 2em;
     text-shadow: $textshadow;
     margin: 0;
   }
@@ -67,4 +64,11 @@ body {
   background: #fff;
   min-height: 200px;
   opacity: 0.3;
+}
+.container {
+  width: 100%;
+  background: #fff;
+  .footer {
+    text-align: center;
+  }
 }
