--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -44,7 +44,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: scroll;
+  background-attachment: fixed;
 }
 .fixed-bg1 {
   background-image: url('http://eagleads.phpsitescripts.com/images/eaglenest.jpg');
@@ -61,22 +61,30 @@ body {
 
 /* Video */
 .ParallaxVideo {
-  height: 900px;
+  min-height: 900px;
   padding-top: 110px;
   video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
     min-width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -999;
-    background: transparent url('http://eagleads.phpsitescripts.com/images/wheat.jpg') no-repeat 0 0;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background: url('http://eagleads.phpsitescripts.com/images/eaglenest.jpg') no-repeat;
+    background-size: cover;
   }
   h1 {
     color: #fff;
     font-size: 9em;
     line-height: 1.1;
     text-align: center;
-    opacity: 0.9;
+    opacity: 0.8;
     font-family: $headingfont;
     font-weight: 400;
     text-shadow: $textshadow;
