--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,12 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: #000; }
+  background-color: #000;
+  background-image: url("http://eagleads.phpsitescripts.com/images/stills/greenmountaincross.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed; }
 
 /* Top Navbar */
 .navbar-ea {
@@ -28,7 +33,7 @@ body {
   background-attachment: fixed; }
 
 .fixed-bg1 {
-  background-image: url("http://eagleads.phpsitescripts.com/images/eaglenest.jpg");
+  background-image: url("http://eagleads.phpsitescripts.com/images/shiningwaters.jpg");
   min-height: 928px; }
 
 .fixed-bg2 {
@@ -36,10 +41,14 @@ body {
   min-height: 1142px; }
 
 .fixed-bg3 {
-  background-image: url("http://eagleads.phpsitescripts.com/images/greenmountaincross.jpg");
+  background-image: url("http://eagleads.phpsitescripts.com/images/eaglenest.jpg");
   min-height: 1300px; }
 
 /* Video */
+video {
+  display: block; }
+
+/* IE 8 */
 .ParallaxVideo {
   min-height: 900px;
   padding-top: 110px; }
@@ -56,7 +65,7 @@ body {
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
-    background: url("http://eagleads.phpsitescripts.com/images/eaglenest.jpg") no-repeat;
+    background: url("http://eagleads.phpsitescripts.com/images/stills/greenmountaincross.jpg") no-repeat;
     background-size: cover; }
   .ParallaxVideo h1 {
     color: #fff;
@@ -81,6 +90,24 @@ body {
       font-family: "Cinzel", serif;
       margin: 0; }
 
+/* Switch off video for smaller devices */
+@media screen and (max-device-width: 800px) {
+  html {
+    background: url("http://eagleads.phpsitescripts.com/images/stills/greenmountaincross_sm.jpg") #000 no-repeat center center fixed; }
+
+  #bgvideo {
+    display: none; } }
+.title {
+  color: #fff;
+  font-size: 5em;
+  line-height: 1.1;
+  text-align: center;
+  opacity: 1.0;
+  font-family: "Cinzel", serif;
+  font-weight: 400;
+  text-shadow: 2px 2px 2px #000;
+  padding: 1em; }
+
 .fa {
   padding: 3px; }
 
@@ -89,11 +116,20 @@ body {
   min-height: 200px;
   opacity: 0.3; }
 
-/* Footer */
-.container {
+.blacktransparent {
+  background: #000;
+  opacity: 0.5;
   width: 100%;
-  background: #fff; }
-  .container .footer {
+  margin-top: 4em; }
+
+/* Footer */
+.footercontainer {
+  width: 100%;
+  background: #fff;
+  position: fixed;
+  box-shadow: -2px -2px 2px #000;
+  bottom: 0; }
+  .footercontainer .footer {
     text-align: center; }
 
 /* Media Queries */
