--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -124,17 +124,6 @@ video { display: block; } /* IE 8 */
   }
 }
 
-.title {
-  color: #fff;
-  font-size: 5em;
-  line-height: 1.1;
-  text-align: center;
-  opacity: 1.0;
-  font-family: $headingfont;
-  font-weight: 400;
-  text-shadow: $textshadow;
-  padding: 1em;
-}
 .fa {
   padding: 3px;
 }
@@ -145,9 +134,23 @@ video { display: block; } /* IE 8 */
 }
 .blacktransparent {
   background: #000;
-  opacity: 0.5;
+  opacity: 0.7;
   width: 100%;
+  min-height: 100px;
+  //margin-left: 0;
   margin-top: 4em;
+}
+.title {
+  color: #fff;
+  font-size: 5em;
+  line-height: 1.1;
+  text-align: center;
+  opacity: 1.0;
+  font-family: $headingfont;
+  font-weight: 400;
+  text-shadow: $textshadow;
+  padding: 0.5em;
+  padding-right: 1em;
 }
 
 /* Footer */
@@ -172,6 +175,9 @@ video { display: block; } /* IE 8 */
       font-size: 1em;
     }
   }
+  .title {
+    font-size: 2em;
+  }
 }
 @media (min-width:481px) { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
   .ParallaxVideo {
@@ -182,6 +188,9 @@ video { display: block; } /* IE 8 */
       font-size: 2em;
     }
   }
+  .title {
+    font-size: 3em;
+  }
 }
 @media (min-width:641px) { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
   .ParallaxVideo {
@@ -189,12 +198,18 @@ video { display: block; } /* IE 8 */
       font-size: 8em;
     }
   }
+  .title {
+    font-size: 4em;
+  }
 }
 @media (min-width:961px) { /* tablet, landscape iPad, lo-res laptops ands desktops */
   .ParallaxVideo {
     h1 {
       font-size: 9em;
     }
+  }
+  .title {
+    font-size: 5em;
   }
 }
 @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */
@@ -206,11 +221,17 @@ video { display: block; } /* IE 8 */
       font-size: 3em;
     }
   }
+  .title {
+    font-size: 5em;
+  }
 }
 @media (min-width:1281px) { /* hi-res laptops and desktops */
   .ParallaxVideo {
     h1 {
       font-size: 11em;
     }
+  }
+  .title {
+    font-size: 6em;
   }
 }
