--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -39,9 +39,13 @@ body {
       font-size: 1.5em;
       float: none;
       display: inline-block;
+      margin: 2px;
       a {
         color: #000;
         text-shadow: 2px 2px 1px #fff, -2px -2px 1px #fff;
+      }
+      &:hover {
+        background: #eee;
       }
     }
   }
@@ -136,7 +140,7 @@ video { display: block; } /* IE 8 */
 }
 
 .fa {
-  padding: 3px;
+  padding-right: 3px;
 }
 .whitetransparent {
   background: #fff;
@@ -148,8 +152,8 @@ video { display: block; } /* IE 8 */
   opacity: 0.7;
   width: 100%;
   min-height: 100px;
-  //margin-left: 0;
   margin-top: 4em;
+  box-shadow: -1px -1px 2px #fff;
 }
 .title {
   color: #fff;
@@ -168,6 +172,7 @@ video { display: block; } /* IE 8 */
 .footercontainer {
   width: 100%;
   background: #fff;
+  opacity: 0.8;
   position: fixed;
   box-shadow: $boxshadowtop;
   bottom: 0;
