--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -26,6 +26,9 @@ body {
 .body_success {
   background-image: url('http://eagleads.phpsitescripts.com/images/stills/rivervalley.jpg');
 }
+.body_support {
+  background-image: url('http://eagleads.phpsitescripts.com/images/stills/soaringheights.jpg');
+}
 /* Top Navbar */
 .navbar-ea {
   opacity: 0.8;
