--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,9 @@ body {
 .body_success {
   background-image: url("http://eagleads.phpsitescripts.com/images/stills/rivervalley.jpg"); }
 
+.body_support {
+  background-image: url("http://eagleads.phpsitescripts.com/images/stills/soaringheights.jpg"); }
+
 /* Top Navbar */
 .navbar-ea {
   opacity: 0.8;
