--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -29,6 +29,9 @@ body {
 .body_support {
   background-image: url('http://eagleads.phpsitescripts.com/images/stills/soaringheights.jpg');
 }
+.body_faqs {
+  background-image: url('http://eagleads.phpsitescripts.com/images/stills/bluemountains.jpg');
+}
 /* Top Navbar */
 .navbar-ea {
   opacity: 0.8;
@@ -181,6 +184,32 @@ video { display: block; } /* IE 8 */
   bottom: 0;
   .footer {
     text-align: center;
+  }
+}
+
+/* Accordions */
+.panel-group {
+  margin-top: 1.4em;
+  opacity: 0.7;
+  box-shadow: $boxshadow;
+  .panel-heading {
+    background: #000;
+    .panel-title {
+      a {
+        font-family: $headingfont;
+        font-size: 1.5em;
+        color: #fff;
+        text-decoration: none;
+        opacity: 1.0;
+        &:hover {
+          font-weight: bold;
+        }
+      }
+    }
+  }
+  .panel-body {
+    font-family: $contentfont;
+    font-size: 1.5em;
   }
 }
 
