--- a/public/css/style.css
+++ b/public/css/style.css
@@ -158,6 +158,9 @@ video {
     text-align: center; }
 
 /* Accordions */
+.panel {
+  border: 0; }
+
 .panel-group {
   margin-top: 1.4em;
   opacity: 0.7;
@@ -167,11 +170,11 @@ video {
     .panel-group .panel-heading .panel-title a {
       font-family: "Cinzel", serif;
       font-size: 1.5em;
-      color: #fff;
+      font-weight: bold;
       text-decoration: none;
       opacity: 1.0; }
       .panel-group .panel-heading .panel-title a:hover {
-        font-weight: bold; }
+        color: #fff; }
   .panel-group .panel-body {
     font-family: "Raleway", sans-serif;
     font-size: 1.5em; }
