--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -188,6 +188,9 @@ video { display: block; } /* IE 8 */
 }
 
 /* Accordions */
+.panel {
+  border: 0;
+}
 .panel-group {
   margin-top: 1.4em;
   opacity: 0.7;
@@ -198,11 +201,11 @@ video { display: block; } /* IE 8 */
       a {
         font-family: $headingfont;
         font-size: 1.5em;
-        color: #fff;
+        font-weight: bold;
         text-decoration: none;
         opacity: 1.0;
         &:hover {
-          font-weight: bold;
+          color: #fff;
         }
       }
     }
