Fix error messages li alignment and bullet spacing in bootstrap alerts

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,12 @@ body {
 .body_faqs {
   background-image: url("http://eagleads.phpsitescripts.com/images/stills/bluemountains.jpg"); }
 
+.body_login {
+  background-image: url("http://eagleads.phpsitescripts.com/images/stills/greenmountaincross.jpg"); }
+
+.body_join {
+  background-image: url("http://eagleads.phpsitescripts.com/images/stills/rivervalley.jpg"); }
+
 /* Top Navbar */
 .navbar-ea {
   opacity: 0.8;
@@ -204,6 +210,15 @@ video {
 .form-control {
   color: #302c22;
   opacity: 0.7; }
+
+.help-block {
+  color: #fff; }
+
+.alert .errorlist {
+  width: 50%;
+  margin: 0 auto; }
+  .alert .errorlist li {
+    text-align: left; }
 
 /* Media Queries */
 @media (min-width: 320px) {
