Temporariy comment out admin and sponsor notification emais since refemail variable is empty

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,6 +29,9 @@ body {
 .body_login {
   background-image: url("http://eagleads.phpsitescripts.com/images/stills/greenmountaincross.jpg"); }
 
+.body_forgot {
+  background-image: url("http://eagleads.phpsitescripts.com/images/stills/mistyforest.jpg"); }
+
 .body_join {
   background-image: url("http://eagleads.phpsitescripts.com/images/stills/rivervalley.jpg"); }
 
