--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -39,6 +39,9 @@ body {
 .body_login {
   background-image: url('http://eagleads.phpsitescripts.com/images/stills/greenmountaincross.jpg');
 }
+.body_forgot {
+  background-image: url('http://eagleads.phpsitescripts.com/images/stills/mistyforest.jpg');
+}
 .body_join {
   background-image: url('http://eagleads.phpsitescripts.com/images/stills/rivervalley.jpg');
 }
